@@ -86,6 +86,7 @@
 #        5.1.1   11:1:1    7:1:3     -
 #        5.1.2   11:2:1    7:2:3     -
 #        6.0.0   12:0:2    8:0:4     -
+#        6.1.0   13:0:3    9:0:5     -
 #
 # Starting at 3:0:0 is a slight abuse of the versioning system, but it
 # ensures we're past soname libgmp.so.2, which was used on Debian GNU/Linux
@@ -98,13 +99,13 @@
 # it's still good to get the shared library filename (like
 # libgmpxx.so.3.0.4) incrementing, to make it clear which GMP it's from.
 
-LIBGMP_LT_CURRENT    = 12
+LIBGMP_LT_CURRENT    = 13
 LIBGMP_LT_REVISION   = 0
-LIBGMP_LT_AGE        = 2
+LIBGMP_LT_AGE        = 3
 
-LIBGMPXX_LT_CURRENT  = 8
+LIBGMPXX_LT_CURRENT  = 9
 LIBGMPXX_LT_REVISION = 0
-LIBGMPXX_LT_AGE      = 4
+LIBGMPXX_LT_AGE      = 5
 
 
 SUBDIRS = tests mpn mpz mpq mpf printf scanf rand cxx demos tune doc
